bug 679783 - websockets oninputstreamready() crash. r=jduell